...
        var conf = UIButton.Configuration.plain()
        var icon = UIImage(systemName: "chevron.left")
        icon?.withTintColor(.plainButtonText, renderingMode: .alwaysOriginal)
        conf.image = icon
        $0.configuration = conf
        $0.tintColor = .plainButtonText
        $0.accessibilityIdentifier = "cafeteria.previous_date"
        $0.addTarget(self, action: #selector(previousDateButtonTapped), for: .touchUpInside)
    }

    private lazy var feedDatePicker = UIDatePicker().then {
        $0.datePickerMode = .date
        $0.preferredDatePickerStyle = .compact
...
        var conf = UIButton.Configuration.plain()
        var icon = UIImage(systemName: "chevron.right")
        icon?.withTintColor(.plainButtonText, renderingMode: .alwaysOriginal)
        conf.image = icon
        $0.configuration = conf
        $0.tintColor = .plainButtonText
        $0.accessibilityIdentifier = "cafeteria.next_date"
        $0.addTarget(self, action: #selector(nextDateButtonTapped), for: .touchUpInside)
    }

    private lazy var shareButton = UIButton(type: .system).then {
        var configuration = UIButton.Configuration.plain()
        configuration.background.backgroundColor = Self.actionButtonBackground
...
                .font: UIFont.godo(size: 14, weight: .bold),
                .foregroundColor: foregroundColor
            ]))
            button.configuration = updatedConfiguration
        }
        $0.accessibilityLabel = String(localized: "cafeteria.share")
        $0.accessibilityIdentifier = "cafeteria_share_button"
        $0.addTarget(self, action: #selector(shareButtonTapped), for: .touchUpInside)
    }

    private lazy var shareBar = UIView().then {
        $0.backgroundColor = .systemBackground
    }
...
